--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.11.2",
     "@pinia/nuxt": "^0.5.1",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/nuxt": "^10.9.0",
     "daisyui": "^4.6.1",
     "nuxt": "^3.10.0",
     "nuxt-icon": "^0.6.8",
-    "nuxt-swiper": "^1.2.2",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
     "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33"
+    "postcss": "^8.4.33",
+    "swiper": "^11.0.7"
   }
 }
