--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/image": "^1.4.0",
     "@nuxtjs/google-fonts": "^3.1.3",
+    "@nuxtjs/seo": "2.0.0-rc.9",
     "@nuxtjs/tailwindcss": "^6.11.2",
     "@pinia/nuxt": "^0.5.1",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
     "daisyui": "^4.6.1",
-    "nuxt": "^3.10.0",
+    "nuxt": "^3.11.1",
     "nuxt-icon": "^0.6.8",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
