Adiciona importação de URL no nuxt.config.ts e atualiza pacotes

--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "daisyui": "^4.6.1",
     "nuxt": "^3.11.1",
     "nuxt-icon": "^0.6.8",
+    "prisma": "^5.11.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "swiper": "^11.0.7"
