--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@kgierke/nuxt-basic-auth": "^1.5.0",
     "@nuxt/image": "^1.4.0",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/seo": "2.0.0-rc.9",
@@ -21,8 +22,10 @@
     "nuxt": "^3.11.1",
     "nuxt-icon": "^0.6.8",
     "prisma": "^5.11.0",
+    "typescript": "^5.4.3",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-tsc": "1"
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
