--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@kgierke/nuxt-basic-auth": "^1.5.0",
+    "@nuxt/content": "^2.12.1",
     "@nuxt/image": "^1.4.0",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/seo": "2.0.0-rc.9",
