--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   "dependencies": {
     "@prisma/client": "^5.11.0",
     "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33",
-    "swiper": "^11.0.7"
+    "postcss": "^8.4.33"
   }
 }
