--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "@types/nodemailer": "^6.4.14",
     "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33"
+    "nodemailer": "^6.9.13",
+    "postcss": "^8.4.33",
+    "sharp": "^0.33.3"
   }
 }
