--- a/package.json
+++ b/package.json
@@ -30,10 +30,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
-    "@types/nodemailer": "^6.4.14",
     "autoprefixer": "^10.4.17",
-    "nodemailer": "^6.9.13",
     "postcss": "^8.4.33",
+    "resend": "^3.2.0",
     "sharp": "^0.33.3"
   }
 }
