--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "daisyui": "^4.6.1",
     "nuxt": "^3.11.1",
     "nuxt-icon": "^0.6.8",
+    "nuxt-security": "^1.4.3",
     "prisma": "^5.11.0",
     "typescript": "^5.4.3",
     "vue": "^3.4.15",
