--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "resend": "^3.2.0",
