--- a/package.json
+++ b/package.json
@@ -10,29 +10,30 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@kgierke/nuxt-basic-auth": "^1.5.0",
+    "@kgierke/nuxt-basic-auth": "^1.6.0",
     "@nuxt/content": "^2.12.1",
-    "@nuxt/image": "^1.4.0",
-    "@nuxtjs/google-fonts": "^3.1.3",
+    "@nuxt/image": "^1.7.0",
+    "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/seo": "2.0.0-rc.9",
-    "@nuxtjs/tailwindcss": "^6.11.2",
+    "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.1",
-    "@vueuse/core": "^10.9.0",
-    "@vueuse/nuxt": "^10.9.0",
-    "daisyui": "^4.6.1",
-    "nuxt": "^3.11.1",
-    "nuxt-icon": "^0.6.8",
-    "typescript": "^5.4.3",
-    "vue": "^3.4.15",
-    "vue-router": "^4.2.5",
-    "vue-tsc": "1"
+    "@vueuse/core": "^10.10.0",
+    "@vueuse/nuxt": "^10.10.0",
+    "daisyui": "^4.11.1",
+    "nuxt": "^3.11.2",
+    "nuxt-icon": "^0.6.10",
+    "typescript": "^5.4.5",
+    "vue": "^3.4.27",
+    "vue-router": "^4.3.2",
+    "vue-tsc": "^1.8.27"
   },
   "dependencies": {
-    "@prisma/client": "^5.11.0",
-    "@vercel/speed-insights": "^1.0.10",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33",
+    "@prisma/client": "^5.14.0",
+    "@vercel/speed-insights": "^1.0.11",
+    "autoprefixer": "^10.4.19",
+    "nuxt-svgo": "^4.0.1",
+    "postcss": "^8.4.38",
     "resend": "^3.2.0",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.4"
   }
 }
