--- a/package.json
+++ b/package.json
@@ -11,29 +11,30 @@
   },
   "devDependencies": {
     "@kgierke/nuxt-basic-auth": "^1.6.0",
-    "@nuxt/content": "^2.13.0",
+    "@nuxt/content": "^2.13.2",
     "@nuxt/image": "^1.7.0",
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/robots": "^4.0.2",
     "@nuxtjs/seo": "2.0.0-rc.9",
-    "@nuxtjs/tailwindcss": "^6.12.0",
-    "@pinia/nuxt": "^0.5.1",
+    "@nuxtjs/tailwindcss": "^6.12.1",
+    "@pinia/nuxt": "^0.5.2",
     "@vueuse/core": "^10.11.0",
     "@vueuse/nuxt": "^10.11.0",
-    "daisyui": "^4.12.6",
-    "nuxt": "^3.12.2",
+    "daisyui": "^4.12.10",
+    "nuxt": "^3.12.4",
     "nuxt-icon": "^0.6.10",
-    "typescript": "^5.5.2",
-    "vue": "^3.4.30",
+    "typescript": "^5.5.4",
+    "vue": "^3.4.34",
     "vue-router": "^4.4.0",
     "vue-tsc": "^1.8.27"
   },
   "dependencies": {
-    "@prisma/client": "^5.15.1",
+    "@prisma/client": "^5.17.0",
     "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "^10.4.19",
-    "nuxt-svgo": "^4.0.1",
-    "postcss": "^8.4.38",
-    "resend": "^3.3.0",
+    "nuxt-svgo": "^4.0.2",
+    "postcss": "^8.4.40",
+    "resend": "^3.5.0",
     "sharp": "^0.33.4"
   }
 }
