--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "enzofagunz-portfolio",
   "private": true,
   "type": "module",
   "scripts": {
@@ -12,20 +12,20 @@
   "devDependencies": {
     "@kgierke/nuxt-basic-auth": "^1.6.0",
     "@nuxt/content": "^2.13.2",
-    "@nuxt/image": "^1.8.0",
+    "@nuxt/image": "^1.8.1",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/robots": "^4.1.7",
     "@nuxtjs/seo": "2.0.0-rc.9",
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "@pinia/nuxt": "^0.5.4",
+    "@pinia/nuxt": "^0.5.5",
     "@vueuse/core": "^10.11.1",
     "@vueuse/nuxt": "^10.11.1",
-    "daisyui": "^4.12.10",
+    "daisyui": "^4.12.11",
     "nuxt": "^3.13.2",
     "nuxt-icon": "^0.6.10",
     "prettier": "3.3.3",
     "typescript": "^5.6.2",
-    "vue": "^3.5.10",
+    "vue": "^3.5.11",
     "vue-router": "^4.4.5",
     "vue-tsc": "^1.8.27"
   },
